2007-10-08  Robert Schwebel <r.schwebel@pengutronix.de>

	* iptables: update the iptables package to 1.3.8 and updates
	iptables.in and iptables.make to match this version. Updated
	menu structure to reflect the current iptables modules.
	Added ipt_DF module as patch - it's some ugly hack to remove
	the DF bit from connections. It's sometimes required for
	broken TCP stacks behind routers, which ignore ICMP no
	fragmentation replies and insist on sending large pakets with
	DF flag set. Patch by Carsten Schlote.

2007-10-01  Robert Schwebel <r.schwebel@pengutronix.de>

	* gawk: updated and targetinstall completed. Simply completes
	the gawk configuration and installation. Package now usable.
	Patch by Carsten Schlote.

2007-10-01  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: This updates sudo to 1.6.8p12. It patches some compile
	breakage, when trying to cross compile. It also allows to
	install a user sudoers file from projectroot. Patch by Carsten
	Schlote.

2007-09-26  Robert Schwebel <r.schwebel@pengutronix.de>

	* ntp: update NTP package to version 4.2.4p3. Adds options for
	rc.d links for the server and ntpdc plus configurations. Some
	missing /var directories for statistics files have also been
	added. Patch by Carsten Schlote.

2007-09-21  Bjoern Buerger <b.buerger@pengutronix.de>

	* less: added

2007-09-20  Robert Schwebel <r.schwebel@pengutronix.de>

	* libcgi: added; patch by Guillaume Gourat.

2007-07-26  Robert Schwebel <r.schwebel@pengutronix.de>

	* liboil: added; patch by Guillaume Gourat.

2007-05-05  Robert Schwebel <r.schwebel@pengutronix.de>

	* trunk: backports from 1.0.0-trunk 

2007-05-05  Robert Schwebel <r.schwebel@pengutronix.de>

	* release: released 1.0.0

2007-05-04  Robert Schwebel <r.schwebel@pengutronix.de>

	* figlet: fix output
	* db41: cleanup; patch by Randall Loomis
	* db41: fixed build issues with the patch above
	* sysfsutils: fixed install path for systool; patch by Jari
	Takkala